<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="RelativeOverlap">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_init_title"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/activate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_intro_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/text_had_setting"
            android:text="@string/step_1"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_step_1"
            android:layout_alignStart="@id/text_step_1"
            android:layout_alignEnd="@id/text_step_1"
            android:layout_marginTop="4dp"
            android:text="@string/step_1_tip"
            android:textColor="@color/colorTextLight"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_had_setting"
            style="@style/SearchButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/had_setting" />

        <TextView
            android:id="@+id/btn_to_setting"
            style="@style/SearchButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_input_bg"
            android:text="@string/to_setting"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/change_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_intro_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/text_had_select"
            android:text="@string/step_2"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_step_2"
            android:layout_alignStart="@id/text_step_2"
            android:layout_alignEnd="@id/text_step_2"
            android:layout_marginTop="4dp"
            android:text="@string/step_2_tip"
            android:textColor="@color/colorTextLight"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_had_select"
            style="@style/SearchButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/had_select" />

        <TextView
            android:id="@+id/btn_to_select"
            style="@style/SearchButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_input_bg"
            android:text="@string/to_select"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_intro_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/setting_init_step_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_3"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/step_3_tip"
            android:textColor="@color/colorTextLight"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_intro_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/setting_init_step_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_4"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/step_4_tip"
            android:textColor="@color/colorTextLight"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>